--- a/.github/workflows/selenium-ci.yml
+++ b/.github/workflows/selenium-ci.yml
@@ -1,43 +1,47 @@
 name: Selenium Python CI
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
-  test:
+  selenium-tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        browser: [chrome, firefox, edge]
 
     steps:
-        - name: Checkout Code
-          uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-        - name: Set Up Python
-          uses: actions/setup-python@v4
-          with:
-            python-version: "3.11"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
-        - name: Install Dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install selenium webdriver-manager
 
-        - name: Install browsers
-          run: |
-            sudo apt-get update
-            sudo apt-get install -y chromium-browser chromium-chromedriver
+      - name: Install browsers
+        run: |
+          if [ "${{ matrix.browser }}" == "chrome" ]; then
+            sudo apt-get install -y google-chrome-stable
+          elif [ "${{ matrix.browser }}" == "firefox" ]; then
             sudo apt-get install -y firefox
-            sudo apt-get install -y xvfb
+          elif [ "${{ matrix.browser }}" == "edge" ]; then
+            curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
+            sudo install -o root -g root -m 644 microsoft.gpg /etc/apt/trusted.gpg.d/
+            sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main" > /etc/apt/sources.list.d/microsoft-edge.list'
+            sudo apt update
+            sudo apt install -y microsoft-edge-stable
+          fi
 
-        
-        - name: Start Xvfb
-          run: |
-            Xvfb :99 -screen 0 1920x1080x24 &
-          env:
-            DISPLAY: ":99"
-
-        - name: Run tests
-          run: |
-            pytest -s
-          env:
-            DISPLAY: ":99"
-        
+      - name: Run Selenium tests
+        run: |
+          python path/to/your/test_file.py --browser ${{ matrix.browser }}
             
