--- a/.github/workflows/selenium-ci.yml
+++ b/.github/workflows/selenium-ci.yml
@@ -7,8 +7,9 @@ on:
   pull_request:
 
 jobs:
-  selenium-tests:
+  selenium:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         browser: [chrome, firefox, edge]
@@ -25,23 +26,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install selenium webdriver-manager
 
-      - name: Install browsers
+      - name: Run Selenium test
         run: |
-          if [ "${{ matrix.browser }}" == "chrome" ]; then
-            sudo apt-get install -y google-chrome-stable
-          elif [ "${{ matrix.browser }}" == "firefox" ]; then
-            sudo apt-get install -y firefox
-          elif [ "${{ matrix.browser }}" == "edge" ]; then
-            curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
-            sudo install -o root -g root -m 644 microsoft.gpg /etc/apt/trusted.gpg.d/
-            sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main" > /etc/apt/sources.list.d/microsoft-edge.list'
-            sudo apt update
-            sudo apt install -y microsoft-edge-stable
-          fi
-
-      - name: Run Selenium tests
-        run: |
-          python path/to/your/test_file.py --browser ${{ matrix.browser }}
-            
+          python test/test_auth.py --browser ${{ matrix.browser }}
