--- a/.github/workflows/selenium-ci.yml
+++ b/.github/workflows/selenium-ci.yml
@@ -7,9 +7,8 @@ on:
   pull_request:
 
 jobs:
-  selenium:
+  selenium-tests:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         browser: [chrome, firefox, edge]
@@ -26,9 +25,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install selenium webdriver-manager
+          pip install selenium
 
       - name: Run Selenium test
         run: |
+          export PYTHONPATH=$PYTHONPATH:$(pwd)
           python test/test_auth.py --browser ${{ matrix.browser }}
