--- a/.github/workflows/selenium-ci.yml
+++ b/.github/workflows/selenium-ci.yml
@@ -2,12 +2,12 @@ name: Selenium Python CI
 
 on:
   push:
-    branches:
-      -main
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
-  selenium-tests:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -25,9 +25,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install selenium
+          pip install -r requirements.txt
 
-      - name: Run Selenium test
+      - name: Run Selenium tests
         run: |
           export PYTHONPATH=$PYTHONPATH:$(pwd)
           python test/test_auth.py --browser ${{ matrix.browser }}
